--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,7 @@
+{% import "bootstrap/wtf.html" as wtf %}
+
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,5 +9,6 @@
 </head>
 <body>
 Flask working
+{{ wtf.quick_form(form) }}
 </body>
 </html>
